platform/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spm
  labels:
    app.kubernetes.io/part-of: spm
    environment: dev
